# solidity-reflections

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TEST_COVERAGE.md  USAGE.md  release-plz.toml
.github/: CODE_OF_CONDUCT.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/commands/: Cargo.toml
crates/commands/assets/: .gitignoreTemplate  README.md
crates/commands/assets/solidity/: Autowirable.s.sol
crates/commands/assets/solidity/configurations/: Eip4337Configuration.s.sol  Eip4337FactoryConfiguration.s.sol  GuardianBasedRecoveryExecutorConfiguration.s.sol  GuardianExecutorConfiguration.s.sol  TUPConfiguration.s.sol
crates/commands/assets/solidity/interfaces/: IConfiguration.s.sol  IWiringMechanism.s.sol
crates/commands/assets/solidity/libraries/: Sources.s.sol
crates/commands/assets/solidity/wiring/: StdConfigBasedWiring.s.sol
crates/commands/src/: lib.rs  utils.rs
crates/commands/src/commands/: collect.rs  generate.rs  init.rs  mod.rs  serve.rs
crates/commands/tests/: tests-collect.rs  tests-generate.rs  tests-init.rs  tests-serve.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  errors.rs  generator.rs  lib.rs  parser.rs  remappings.rs  utils.rs
