[package]
name = "reflections-commands"
description = "High-level commands for the Reflections CLI"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
clap.workspace = true
clap-verbosity-flag = "3.0.2"
cliclack.workspace = true
derive_more.workspace = true
env_logger = { version = "0.11.6", features = ["unstable-kv"] }
reflections-core = { path = "../core", version = "0.1.0" }
tokio.workspace = true

[dev-dependencies]
testdir.workspace = true
temp-env.workspace = true

[features]
default = []
