[package]
name = "reflections-core"
description = "Core functionality for Reflections"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lints]
workspace = true

[dependencies]
dunce = "1.0.5"
log = { workspace = true, features = ["kv_std"] }
thiserror.workspace = true
toml_edit = { version = "0.23.3", features = ["serde"] }

[dev-dependencies]
testdir.workspace = true

[features]
default = []
serde = []
